# Streamcatcher

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  cameras.md  http-api.md  index.md  installation.md  orientation-split.html  plan.html  python-api.md  record-plan.md  reference.md  security.md  usage.md
src/streamcatcher/: __init__.py  cli.py  config.py  logging_setup.py
src/streamcatcher/api/: __init__.py  app.py  models.py  sessions.py
src/streamcatcher/player/: __init__.py  base.py  factory.py  opencv_player.py  orientations.py  profiles.py  reader.py  reconnect.py  recorder.py  reprojection.py  session.py  stub_player.py  vlc_player.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_logging_setup.py  test_orientations.py  test_player.py  test_profiles.py  test_reader.py  test_reconnect.py  test_recorder.py  test_reprojection.py  test_session.py
