[project]
name = "streamcatcher"
version = "0.1.0"
description = "A cross-platform CLI to view RTMP/RTSP video streams (incl. 360) in a small window."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thugipan Sivanesan", email = "thugipan@gmail.com" }]
keywords = ["rtsp", "rtmp", "stream", "cli", "opencv", "360", "equirectangular"]
# No "License ::" classifiers: the SPDX `license` field above supersedes them,
# and mixing the two is rejected by current build backends.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Typing :: Typed",
]
dependencies = [
    "opencv-python>=4.10.0",
    "numpy>=2.0",
    "typer>=0.26.8",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
# The HTTP control API. Kept optional so the core CLI stays lean and the package
# imports with no web stack: `pip install streamcatcher[api]`.
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.urls]
Homepage = "https://github.com/ThugipanSivanesan/Streamcatcher"
Repository = "https://github.com/ThugipanSivanesan/Streamcatcher"
Documentation = "https://thugipansivanesan.github.io/Streamcatcher/"
Issues = "https://github.com/ThugipanSivanesan/Streamcatcher/issues"
Changelog = "https://github.com/ThugipanSivanesan/Streamcatcher/blob/main/CHANGELOG.md"

[project.scripts]
streamcatcher = "streamcatcher.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "pre-commit>=4.6.0",
    "httpx>=0.28",  # Starlette's TestClient transport, for the API tests
]
# Documentation site (mkdocs-material + API reference from docstrings). Kept in
# its own group so it isn't pulled into the default dev/test environment.
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamcatcher"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
# Typer uses call markers (typer.Option/typer.Argument) as parameter defaults by
# design; these are not the mutable-default hazard B008 targets.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
addopts = "-q --cov=streamcatcher --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
